Network details dialog: Add 'loading' string

Bug: 804698
Change-Id: Icddb99d807b6fd0e76b9a6d7f91e6525b7f9b7f0
Reviewed-on: https://chromium-review.googlesource.com/882282
Reviewed-by: Toni Barzic <tbarzic@chromium.org>
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531619}
Former-commit-id: f0285d0821763d0387af6be82c9b6e8ef18190b5